data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2210.wast
;; 10. **Test Description:** Generate a loop where `br_table` includes labels with operand counts diverging from the default target label. Specifically, test the stack unwinding to ensure one implementation halts due to `BrTableArityMismatch`, avoiding an infinite loop scenario, unlike the typical trapping behavior in WebAssembly.

(assert_invalid
  (module
    (func
      (block (result i32)
        (loop (result i32)
          (i32.const 0)
          (br_table 0 1 (i32.const 0) (i32.const 1))
        )
      )
    )
  )
  "type mismatch"
)